# backend

./: README.md  docker-compose.yml  install_crown.sh
CalculationModule/: CMakeLists.txt  Dockerfile
CalculationModule/src/: BaseStationCalculator.cpp  BaseStationCalculator.h  CalculationModule.cpp  CalculationModule.h  main.cpp
Database/: init.sql
ReceiveServer/: CMakeLists.txt  Dockerfile
ReceiveServer/src/: PostgresDB.cpp  PostgresDB.h  ReceiveServer.cpp  ReceiveServer.h  main.cpp
WebServer/: CMakeLists.txt  Dockerfile
WebServer/src/: WebServer.cpp  WebServer.h  main.cpp
WebServer/web/: app.js  index.html  styles.css
WebSocketServer/: CMakeLists.txt  Dockerfile
WebSocketServer/src/: WebSocketServer.cpp  WebSocketServer.h  main.cpp
